--- a/petclinic/docker-compose.yml
+++ b/petclinic/docker-compose.yml
@@ -9,7 +9,7 @@
 version: '3.8'
 # TEST COMMENT: Trigger PetClinic workflow only
 # ANOTHER TEST COMMENT: Trigger PetClinic workflow and ZAP full scan
-# FINAL TEST COMMENT: Workflow fix validationnkklll
+# FINAL TEST COMMENT: Workflow fix validationnkk
 services:
   petclinic:
     image: springcommunity/spring-petclinic-rest
